fix volume slider readability

--- a/src/app/music-list/music-list.component.scss
+++ b/src/app/music-list/music-list.component.scss
@@ -21,3 +21,20 @@
 .button {
   margin-bottom: 15px;
 }
+
+.shaking {
+  animation: shake 0.5s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.01);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
